tests/basic/negatives/test_if_int_condition.diag
tests/basic/negatives/test_if_int_condition.bas:1:4: error[E1001]: Expected BOOLEAN condition, got INT. Suggestion: use 2 <> 0.
IF 2 THEN PRINT 1
   ^
